# advent_of_code_python

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt
2022/day1_calorie_counting/: solution.py
2022/day2_rock_paper_scissors/: solution.py
2022/day3_rucksack_reorg/: solution.py
2022/day4_camp_cleanup/: solution.py
2022/day5_supply_stacks/: solution.py
2022/day6_tuning_trouble/: solution.py
2022/day7_no_space_left_on_device/: solution.py
2022/day8_treetop_tree_house/: solution.py
2022/day9_rope_bridge/: solution.py
day1_calorie_counting/: solution.py
day2_rock_paper_scissors/: solution.py
src/utility/: helpers.py
src/y2022/day1_calorie_counting/: solution.py
src/y2022/day4_camp_cleanup/: solution.py
src/y2022/day8_treetop_tree_house/: solution.py
src/y2023/d1_trebuchet/: solution.py
src/y2023/d2_cube_conundrum/: solution.py
src/y2024/: __init__.py
src/y2024/ceres_search/: __init__.py  solution.py
src/y2024/historian_hysteria/: __init__.py  solution.py
src/y2024/mull_it_over/: __init__.py  solution.py
src/y2024/red_nosed_reports/: __init__.py  solution.py
src/y2025/: __init__.py
src/y2025/cafeteria/: __init__.py  solution.py
src/y2025/gift_shop/: __init__.py  solution.py
src/y2025/lobby/: __init__.py  solution.py
src/y2025/printing_department/: __init__.py  solution.py
src/y2025/secret_service/: __init__.py  solution.py
src/y2025/trash_compactor/: __init__.py  solution.py
utility/: helpers.py
