[project]
name = "advent_of_code_python"
version = "0.1.0"
description = ""
authors = [
    {name = "jsattari", email = "jsattari3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
